<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.resep.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.resep.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.resep.ui.notifications.ProfileUserFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_resep"
        android:name="com.example.resep.ui.resep.ResepFragment"
        android:label="@string/title_resep"
        tools:layout="@layout/fragment_resep" />
    <fragment
        android:id="@+id/navigation_cari"
        android:name="com.example.resep.ui.cari.CariFragment"
        android:label="@string/title_cari"
        tools:layout="@layout/fragment_cari" />
</navigation>